--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 <body>
   <div class="container">
     <h1>
-      Vanilla
+      Vanilla Project
     </h1>
-    <a href="#" class="btn btn-primary">Click here</a>
   </div>
   <script src="src/app.js"></script>
 </body>
