--- a/index.html
+++ b/index.html
@@ -15,9 +15,50 @@
 </head>
 <body>
   <div class="container">
-    <h1>
-      Vanilla Project
-    </h1>
+    <div class="weather-app">
+      <h1>
+        Lisbon
+      </h1>
+      <ul>
+        <li>
+          Tuesday 00:30
+        </li>
+        <li>
+          Partly cloudy
+        </li>
+      </ul>
+      <div class="row">
+        <div class="col-6">
+          <img 
+            src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" 
+            alt="cloudy"
+          />
+          13° C | F
+        </div>
+        <div class="col-6">
+          <ul>
+            <li>
+              Precipitation: 12%
+            </li>
+            <li>
+              Humidity: 87%
+            </li>
+            <li>
+              Wind: 24 km/h
+            </li>
+          </ul>
+        </div>
+      </div>
+      <small>
+        <a 
+          href="https://github.com/mgd2347/Vanilla-Weather-App"
+          target="_blank"
+        >
+          Open-source code
+        </a>
+        by Maggie F.
+      </small>
+    </div>
   </div>
   <script src="src/app.js"></script>
 </body>
