--- a/index.html
+++ b/index.html
@@ -5,58 +5,108 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>🌈 Weather App</title>
+  <script src="https://kit.fontawesome.com/be2dd3cdc6.js" crossorigin="anonymous"></script>
+
   <link 
-    rel="stylesheet" 
-    href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" 
     crossorigin="anonymous"
-  >
+  />
+  
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet" />
+
   <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
   <div class="container">
-    <div class="weather-app">
-      <h1>
-        Lisbon
-      </h1>
-      <ul>
-        <li>
-          Tuesday 00:30
-        </li>
-        <li>
-          Partly cloudy
-        </li>
-      </ul>
-      <div class="row">
-        <div class="col-6">
-          <img 
-            src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" 
-            alt="cloudy"
-          />
-          13° C | F
+    <div class="wrapper">
+      <div class="weather-app">
+        <div class="row">
+          <div class="col">
+            <div class="header">
+              <h1 id="city">
+                Lisbon
+              </h1>
+              <small>
+                Tuesday 00:30
+              </small>
+              <h5>
+                  Partly cloudy
+              </h5>
+              <h2>
+                <img 
+                  src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" 
+                  alt="cloudy"
+                />
+                <span id="temp">13°</span> <span id="units">C | F</span>
+              </h2>  
+              <small><strong>16° ·</strong> 12°</small>
+            </div>
+          </div>
+          <div class="col">
+            <form id="search-form">
+              <div class="input-group flex-nowrap">
+                <span class="input-group-text" id="addon-wrapping">
+                  <i class="fas fa-search search-icon"></i>
+                </span>
+                <input
+                  autocomplete="off"
+                  type="search"
+                  class="form-control"
+                  placeholder="Search city..."
+                  aria-label="Search"
+                  aria-describedby="addon-wrapping"
+                  id="search-input"
+                />
+                <input 
+                  type="submit"
+                  value="Search"
+                  class="button"
+                />
+              </div>
+            </form>
+            <button class="button">
+              Current location
+            </button>
+            <ul id="conditions">
+              <li>
+                Feels like 12°
+              </li>
+              <li>
+                Precipitation: 12%
+              </li>
+              <li>
+                Humidity: 87%
+              </li>
+              <li>
+                Wind: 24 km/h
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="col-6">
-          <ul>
-            <li>
-              Precipitation: 12%
-            </li>
-            <li>
-              Humidity: 87%
-            </li>
-            <li>
-              Wind: 24 km/h
-            </li>
-          </ul>
+        <div class="row" id="hourly-forecast">
+          <div class="col-2">
+            coming soon: 
+            <br />
+            the forecast
+          </div>
         </div>
       </div>
-      <small>
+      <small id="bottom-links">
         <a 
           href="https://github.com/mgd2347/Vanilla-Weather-App"
           target="_blank"
         >
           Open-source code
         </a>
-        by Maggie F.
+        by 
+        <a 
+          href="https://www.instagram.com/emefialho_fz/"
+          target="_blank"
+        >
+          Maggie F.
+        </a>
       </small>
     </div>
   </div>
