Added the real time date on js

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🌈 Weather App</title>
+  <title>🌈 MWeather App</title>
   <script src="https://kit.fontawesome.com/be2dd3cdc6.js" crossorigin="anonymous"></script>
 
   <link 
@@ -28,9 +28,7 @@
               <h1 id="city">
                 Lisbon
               </h1>
-              <small>
-                Tuesday 00:30
-              </small>
+              <small id="date"></small>
               <h5>
                   Partly cloudy
               </h5>
@@ -102,7 +100,7 @@
         </a>
         by 
         <a 
-          href="https://www.instagram.com/emefialho_fz/"
+          href="https://twitter.com/maggie_fz"
           target="_blank"
         >
           Maggie F.
