--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>🌈 MWeather App</title>
   <script src="https://kit.fontawesome.com/be2dd3cdc6.js" crossorigin="anonymous"></script>
 
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
   <link 
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" 
@@ -25,19 +27,16 @@
         <div class="row">
           <div class="col">
             <div class="header">
-              <h1 id="city">
-                Lisbon
-              </h1>
+              <h1 id="city"></h1>
               <small id="date"></small>
-              <h5>
-                  Partly cloudy
-              </h5>
+              <h5 id="description"></h5>
               <h2>
                 <img 
                   src="https://ssl.gstatic.com/onebox/weather/64/cloudy.png" 
                   alt="cloudy"
+                  id="icon"
                 />
-                <span id="temp">13°</span> <span id="units">C | F</span>
+                <span id="temp"></span>° <span id="units"><strong id="celsius">C</strong> | F</span>
               </h2>  
               <small><strong>16° ·</strong> 12°</small>
             </div>
@@ -64,7 +63,7 @@
                 />
               </div>
             </form>
-            <button class="button">
+            <button class="button" id="current-location">
               Current location
             </button>
             <ul id="conditions">
