Added the forecast

--- a/index.html
+++ b/index.html
@@ -84,9 +84,23 @@
         </div>
         <div class="row" id="hourly-forecast">
           <div class="col-2">
-            coming soon: 
-            <br />
-            the forecast
+            <ul>
+              <li>
+                21:00
+              </li>
+              <li>
+                <img
+                  src="https://openweathermap.org/img/wn/$10n@2x.png"
+                  alt="Rain"
+                />
+              </li>
+              <li>
+                12°
+              </li>
+              <li>
+                Rain
+              </li>
+            </ul>
           </div>
         </div>
       </div>
